# cp_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  index.md  rustfmt.toml
.github/workflows/: check.yml  ci.yml  test.yml
.verification-helper/: compile.sh  config.toml  execute.sh
.verify-helper/: .gitignore  config.toml  list_dependencies.sh  timestamps.remote.json
.verify-helper/docs/: _config.yml
_includes/: theme_fix.html
benches/: bench.rs.md
src/: alg.rs  alg.rs.md  as_int.rs  as_int.rs.md  assign.rs  assign.rs.md  bit.rs  bit.rs.md  bits.rs  bits.rs.md  bitset.rs  bitset.rs.md  bool.rs  bool.rs.md  bound.rs  bound.rs.md  bounded.rs  bounded.rs.md  cast.rs  cast.rs.md  cmp.rs  cmp.rs.md  comp.rs  comp.rs.md  complex.rs  complex.rs.md  conv.rs  conv.rs.md  dfa.rs  dfa.rs.md  ds.rs  ds.rs.md  float.rs  float.rs.md  fp.rs  fp.rs.md  func.rs  func.rs.md  fxhash.rs  fxhash.rs.md  (+61 more)
src/alg/: action.rs  action.rs.md  arith.rs  arith.rs.md
src/bump/: alloc.rs  alloc.rs.md
src/cmp/: total.rs  total.rs.md
src/draft/: dbg.rs  dbg.rs.md  debug.rs  debug.rs.md  for_loop.rs  for_loop.rs.md  fpacc64.rs  fpacc64.rs.md  iprod.rs  iprod.rs.md  linked_list.rs  linked_list.rs.md  minimize_dfa.rs  minimize_dfa.rs.md  uf_fast.rs  uf_fast.rs.md
src/ds/: bitset.rs  bitset.rs.md  disjointst.rs  disjointst.rs.md  dst.rs  dst.rs.md  fenwick.rs  fenwick.rs.md  fwk.rs.md  idx.rs  idx.rs.md  linked_list.rs  linked_list.rs.md  list.rs  list.rs.md  pool.rs  pool.rs.md  segtree.rs  segtree.rs.md  sparse_table.rs  sparse_table.rs.md  sparsetable.rs  (+13 more)
test/: Cargo.toml
(+221 files in other folders)
