[package]
name = "lib"
version = "0.1.0"
authors = ["shino-sky <ms_020916@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "cprbin"
path = "src/main.rs"
doc = false
