[package]
name = "lib"
version = "0.1.0"
authors = ["shino16 <masatosinokawa@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false
default-run = "main"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[[bench]]
name = "bench"
harness = false
